Fix layout bug in sidebar captions alignment.

--- a/css/base.css
+++ b/css/base.css
@@ -187,6 +187,7 @@ p {
     bottom: 20px;
     position: absolute;
     max-width: 200px;
+    margin-bottom: 20px;
     width: 100%;
   }
 
